20180709:
- Fix stiweb and tersoff potentials when used together with global parameters

20180226:
- Disable LAMMPS output for MEAM potentials, which is currently not implemented properly

20180214:
- If there are no atoms inside a potential interaction range potfit will now report an error
- Added tests for minimal distance calculation

=======================================================

potfit-next
+ completely rewrote internal potfit data structure
+ move source code into src directory

potfit-0.7.1 (20141127)
+ remove the version.h file, it caused too much trouble
+ make vasp2force compatible with VASP version 5 OUTCAR files
+ fix output of LAMMPS potential tables
+ small bugfixes

potfit-0.7.0 (20140123)
+ add global scaling parameter (UNTESTED)
+ add tbeam interaction
+ remove WZERO and PARAB options
+ add modified tersoff potential
+ remove NEWSCALE option
+ remove NORESCALE option, rescaling is now no longer enabled by default
  enable it with the RESCALE option
+ bump copyright to 2014

potfit-0.6.0 (20130821)
+ merge MEAM implementation of Jeremy Nicklas (Ohio State University)
+ add Stillinger-Weber potential (option stiweb)
+ add Tersoff potential (option tersoff)
+ remove compatibility mode
+ update diagnostic messages and errors to be more clear
+ most of the helper scripts in the util directory have been rewritten in python

potfit-0.5.3 (20130625)
+ fix building in 32bit environments
+ support latest versions of icc and mkl
+ renamed cbb potential to kawamura

potfit-0.5.2 (20130301)
+ EAM potentials can now be used together with electrostatics (COULOMB or DIPOLE)
+ fixed bug in rescale for pot 4 (reported by Andreas Ruehl)
+ fixed bugs in functions.c (reported by Albert Iskandarov)
+ fixed bug with box of contributing particles

potfit-0.5.1 (20120913)
+ add support for writing LAMMPS potentials (EAM and ADP for now)
+ [BUG] fix invariant potentials, should be working correctly now
+ [BUG] fix recognition of elements with a single letter