@@ -61,7 +61,6 @@ def parse_arguments():
                         type=int, required=False, help='start at combination N')
     parser.add_argument('--count', metavar='N', default=-1,
                         type=int, required=False, help='only compile N versions')
-    parser.add_argument('--acml', action='store_true')
     parser.add_argument('--debug', action='store_true')
     parser.add_argument('--compiler', choices=['clang', 'gcc', 'icc'], default='clang')
     return parser.parse_args()
@@ -97,10 +96,6 @@ def get_working_arrays(args):
         special_options = special_kim_options
     else:
         raise RuntimeWarning('No interaction type defined!')
-
-    if args.acml:
-        cmd.extend(['-l', 'acml'])
-        target_name += '_acml'
 
     if args.debug:
         cmd.append('--debug')
