@@ -1,3 +1,6 @@
+20180909
+- Remove support for ACML. For details see https://github.com/potfit/potfit/issues/43
+
 20180709:
 - Fix stiweb and tersoff potentials when used together with global parameters
 
